--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>histórico de rquisições</h1>
+    <h1>histórico de requisições</h1>
     <div hx-get="/dash">
-        
+          <button type="button" hx-get="/dash">
+        Mostrar histórico
+    </button>
     </div>
 </body>
 </html>
