--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/htmx.org/dist/htmx.js"></script>
+    <link rel="stylesheet" href="../static/style.css">
     <title>Document</title>
 </head>
 <body>
